force-app/main/default/objects/households__HouseholdMember__c/households__HouseholdMember__c.object-meta.xml
<CustomObject>
    <description>Relationship Group Member</description>
    <label>Relationship Group Member</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationship Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>