force-app/main/default/objects/households__HouseholdMember__c/fields/households__Account__c.field-meta.xml
<CustomField>
    <fullName>households__Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Tests</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>