force-app/main/default/objects/households__HouseholdMember__c/fields/households__HardDeleted__c.field-meta.xml
<CustomField>
    <fullName>households__HardDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this box is checked, users will be unable to undelete the record from the recyling bin.  It is checked during account merges.</description>
    <label>Hard Deleted</label>
    <type>Checkbox</type>
</CustomField>