force-app/main/default/objects/households__HouseholdMember__c/fields/households__Household__c.field-meta.xml
<CustomField>
    <fullName>households__Household__c</fullName>
    <label>Relationship Group</label>
    <referenceTo>households__Household__c</referenceTo>
    <relationshipName>Tests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>