force-app/main/default/objects/households__HouseholdMember__c/fields/households__IncludeInRollup__c.field-meta.xml
<CustomField>
    <fullName>households__IncludeInRollup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include In Roll-Up</label>
    <rollup>true</rollup>
    <type>Checkbox</type>
</CustomField>