force-app/main/default/objects/households__HouseholdMember__c/fields/households__IsPrimary__c.field-meta.xml
<CustomField>
    <fullName>households__IsPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>