force-app/main/default/objects/households__HouseholdMember__c/fields/households__IsSecondary__c.field-meta.xml
<CustomField>
    <fullName>households__IsSecondary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secondary</label>
    <type>Checkbox</type>
</CustomField>