force-app/main/default/objects/households__HouseholdMember__c/fields/households__Priority__c.field-meta.xml
<CustomField>
    <fullName>households__Priority__c</fullName>
    <formula>if(households__IsPrimary__c, image(&apos;/img/households/1priority.gif&apos;,&apos;Primary&apos;, 16,16) &amp; &apos;Primary&apos;,       if(households__IsSecondary__c, image(&apos;/img/households/2priority.gif&apos;,&apos;Secondary&apos;, 16,16) &amp; &apos;Secondary&apos;,         image(&apos;/img/households/3priority.gif&apos;,&apos;None&apos;, 16,16)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority</label>
    <type>Text</type>
</CustomField>