force-app/main/default/objects/households__HouseholdMember__c/fields/households__Role__c.field-meta.xml
<CustomField>
    <fullName>households__Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>