force-app/main/default/objects/households__HouseholdMember__c/fields/households__Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>households__Unique_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique Key</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>